--- a/app/src/main/res/layout/words_list.xml
+++ b/app/src/main/res/layout/words_list.xml
@@ -10,8 +10,10 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
+<!--xmlns:tools="http://schemas.android.com/tools"-->
+<!--tools:context="com.example.android.miwok.NumbersActivity"-->
+
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -19,5 +21,4 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.miwok.NumbersActivity"/>
+    android:paddingTop="@dimen/activity_vertical_margin" />
